Display user photos. Thread safety not guaranteed

--- a/Random Users/Resources/Main.storyboard
+++ b/Random Users/Resources/Main.storyboard
@@ -21,12 +21,12 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="xjq-fb-mZO" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xjq-fb-mZO" id="s3F-eB-2mO">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xjq-fb-mZO" id="s3F-eB-2mO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UKu-gh-c0W">
-                                            <rect key="frame" x="0.0" y="0.0" width="44" height="44.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="CgW-wf-THL"/>
                                                 <constraint firstAttribute="width" constant="44" id="GKS-SN-Svb"/>
@@ -41,10 +41,11 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="UKu-gh-c0W" firstAttribute="top" secondItem="s3F-eB-2mO" secondAttribute="top" id="BLl-3G-5Xs"/>
+                                        <constraint firstItem="6XY-bv-lQ6" firstAttribute="centerY" secondItem="UKu-gh-c0W" secondAttribute="centerY" id="HJt-xN-WlB"/>
+                                        <constraint firstItem="6XY-bv-lQ6" firstAttribute="bottom" secondItem="s3F-eB-2mO" secondAttribute="bottomMargin" id="HcE-fm-wam"/>
                                         <constraint firstAttribute="bottom" secondItem="UKu-gh-c0W" secondAttribute="bottom" id="OHt-Tg-Azd"/>
                                         <constraint firstItem="UKu-gh-c0W" firstAttribute="leading" secondItem="s3F-eB-2mO" secondAttribute="leading" id="kIr-2N-32f"/>
                                         <constraint firstItem="6XY-bv-lQ6" firstAttribute="leading" secondItem="UKu-gh-c0W" secondAttribute="trailing" constant="8" id="kZj-9E-G3p"/>
-                                        <constraint firstItem="6XY-bv-lQ6" firstAttribute="top" secondItem="s3F-eB-2mO" secondAttribute="topMargin" id="mqe-hY-a2s"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="6XY-bv-lQ6" secondAttribute="trailing" constant="8" id="tGQ-N5-S6q"/>
                                     </constraints>
                                 </tableViewCellContentView>
