--- a/Random Users/Resources/Main.storyboard
+++ b/Random Users/Resources/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +26,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UKu-gh-c0W">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lambda_Logo_Full" translatesAutoresizingMaskIntoConstraints="NO" id="UKu-gh-c0W">
                                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="CgW-wf-THL"/>
@@ -52,6 +53,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="6XY-bv-lQ6" id="jbq-QI-fdW"/>
                                     <outlet property="userImageView" destination="UKu-gh-c0W" id="hem-Xu-WzE"/>
+                                    <segue destination="uYU-d1-3bb" kind="show" identifier="DetailSegue" id="KkL-3k-FGI"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -72,6 +74,61 @@
             </objects>
             <point key="canvasLocation" x="413.60000000000002" y="71.514242878560722"/>
         </scene>
+        <!--Contact Detail View Controller-->
+        <scene sceneID="2C0-ly-cy4">
+            <objects>
+                <viewController id="uYU-d1-3bb" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ij1-5K-rD3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="gkE-oD-DYo">
+                                <rect key="frame" x="20" y="84" width="335" height="533"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="REZ-IB-5hM">
+                                        <rect key="frame" x="10.5" y="0.0" width="314" height="420.5"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBr-PF-Lrh">
+                                        <rect key="frame" x="146.5" y="437.5" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="paB-26-KoQ">
+                                        <rect key="frame" x="146.5" y="475" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qtj-WV-Ur9">
+                                        <rect key="frame" x="146.5" y="512.5" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nIc-Fr-jlF" firstAttribute="trailing" secondItem="gkE-oD-DYo" secondAttribute="trailing" constant="20" id="9sE-LB-Rdh"/>
+                            <constraint firstItem="nIc-Fr-jlF" firstAttribute="bottom" secondItem="gkE-oD-DYo" secondAttribute="bottom" constant="50" id="ECQ-Ct-h1c"/>
+                            <constraint firstItem="gkE-oD-DYo" firstAttribute="top" secondItem="nIc-Fr-jlF" secondAttribute="top" constant="20" id="JUb-0V-sox"/>
+                            <constraint firstItem="gkE-oD-DYo" firstAttribute="leading" secondItem="nIc-Fr-jlF" secondAttribute="leading" constant="20" id="eeN-zg-nHU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nIc-Fr-jlF"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="paB-26-KoQ" id="mC9-Gc-FVz"/>
+                        <outlet property="largeImageView" destination="REZ-IB-5hM" id="WLt-dr-DfM"/>
+                        <outlet property="nameLabel" destination="UBr-PF-Lrh" id="oez-Pd-GRy"/>
+                        <outlet property="phoneLabel" destination="Qtj-WV-Ur9" id="BVN-9a-4Zh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z2W-jM-njZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1140" y="71.514242878560722"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="0uU-c5-IZl">
             <objects>
@@ -89,4 +146,7 @@
             <point key="canvasLocation" x="-537" y="72"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lambda_Logo_Full" width="574" height="249"/>
+    </resources>
 </document>
